@@ -1,5 +1,8 @@
 = 4.1.2 (Unreleased) =
 
+* When sniffing encodings, if the cchardet library is installed, use
+  it instead of chardet. It's much faster. [bug=1020748]
+
 * Use logging.warning() instead of warning.warn() to notify the user
   that characters were replaced with REPLACEMENT
   CHARACTER. [bug=1013862]
